@@ -1,3 +1,6 @@
+10/09/2010
+- bugfix for change of 08/09/2010 (final {block} tags in subtemplates did not produce correct results)
+
 08/09/2010
 - allow multiple template inheritance branches starting in subtemplates
 
